--- a/Pipfile
+++ b/Pipfile
@@ -4,12 +4,10 @@ verify_ssl = true
 name = "pypi"
 
 [packages]
+intel-numpy = "*"
+intel-scipy = "*"
 numba = "*"
-numpy = "*"
-pandas = "*"
 pyopenms = "*"
-scipy = "*"
-seaborn = "*"
 sphinx = "*"
 "sphinxjp.themes.basicstrap" = "*"
 
