Fix cmake to correctly handle virtual python envs

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,16 +1,25 @@
-cmake_minimum_required(VERSION 3.10)
-project(xsparse)
+cmake_minimum_required(VERSION 3.14)
+project(spectre)
 
 
-option(BUILD_Tests "Build tests" ON)
-option(BUILD_Benchmarks "Build benchmarks" ON)
-
-
-add_subdirectory(xsparse)
-
-
-set(PYBIND11_CPP_STANDARD -std=c++17)
+find_package(Python REQUIRED COMPONENTS Interpreter Development NumPy)
 find_package(pybind11 2.2.4 REQUIRED)
 
-pybind11_add_module(pysparse spectre/xsparse/xsparse.cpp)
-target_link_libraries(pysparse PRIVATE xsparse)
+
+add_library(_sparse MODULE
+        spectre/sparse/src/_sparse.cpp)
+target_compile_features(_sparse PUBLIC
+        cxx_std_17)
+target_compile_definitions(_sparse PRIVATE
+        NPY_NO_DEPRECATED_API NPY_1_7_API_VERSION)
+target_link_libraries(_sparse PRIVATE
+        pybind11::module
+        Python::NumPy)
+set_target_properties(_sparse PROPERTIES
+        PREFIX "${PYTHON_MODULE_PREFIX}"
+        SUFFIX "${PYTHON_MODULE_EXTENSION}"
+        INTERPROCEDURAL_OPTIMIZATION TRUE)
+
+
+install(TARGETS _sparse LIBRARY
+        DESTINATION spectre/sparse)
